Added Speakers photos

--- a/ipreneur.html
+++ b/ipreneur.html
@@ -165,61 +165,164 @@
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
                 <img
-                  src="img/speakers/1.jpg"
-                  alt="Speaker 1"
+                  src="img/speakers/philip-kotler.jpg"
+                  alt="Philip Kotler"
                   class="img-fluid"
                 />
                 <div class="details">
-                  <h3><a href="speaker-details.html">Speaker Name</a></h3>
-                  <p>info about Speaker</p>
-                  <div class="social">
+                  <h3>Philip Kotler</h3>
+                  <!-- <p>info about Speaker</p> -->
+                  <!-- <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
                 <img
-                  src="img/speakers/2.jpg"
-                  alt="Speaker 2"
+                  src="img/speakers/prakash-amte.jpg"
+                  alt="Prakash Amte"
                   class="img-fluid"
                 />
                 <div class="details">
-                  <h3><a href="speaker-details.html">Speaker Name</a></h3>
-                  <p>Speaker info</p>
-                  <div class="social">
+                  <h3>Prakash Amte</h3>
+                  <!-- <p>Speaker info</p> -->
+                  <!-- <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="speaker">
                 <img
-                  src="img/speakers/3.jpg"
-                  alt="Speaker 3"
+                  src="img/speakers/mandakani-amte.jpg"
+                  alt="Mandakani Amte"
                   class="img-fluid"
                 />
                 <div class="details">
-                  <h3><a href="speaker-details.html">Speaker Name</a></h3>
-                  <p>Speaker Info</p>
-                  <div class="social">
+                  <h3>Mandakani Amte</h3>
+                  <!-- <p>Speaker Info</p> -->
+                  <!-- <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img
+                  src="img/speakers/vikas-amte.jpg"
+                  alt="Vikas Amte"
+                  class="img-fluid"
+                />
+                <div class="details">
+                  <h3>Vikas Amte</h3>
+                  <!-- <p>Speaker Info</p> -->
+                  <!-- <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img
+                  src="img/speakers/harish-hande.jpg"
+                  alt="Harish Hande"
+                  class="img-fluid"
+                />
+                <div class="details">
+                  <h3><a href="speaker-details.html">Harish Hande</a></h3>
+                  <!-- <p>Speaker Info</p> -->
+                  <!-- <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img
+                  src="img/speakers/sonam-wangchuk.jpg"
+                  alt="Sonam Wangchuk"
+                  class="img-fluid"
+                />
+                <div class="details">
+                  <h3>Sonam Wangchuk</h3>
+                  <!-- <p>Speaker Info</p> -->
+                  <!-- <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img
+                  src="img/speakers/pawan-agarwal.jpg"
+                  alt="Pawan Agarwal"
+                  class="img-fluid"
+                />
+                <div class="details">
+                  <h3>Pawan Agarwal</h3>
+                  <!-- <p>Speaker Info</p> -->
+                  <!-- <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img
+                  src="img/speakers/sheeshan-mistri.jpg"
+                  alt="Sheeshan Mistri"
+                  class="img-fluid"
+                />
+                <div class="details">
+                  <h3>Sheeshan Mistri</h3>
+                  <!-- <p>Speaker Info</p> -->
+                  <!-- <div class="social">
+                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-google-plus"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+
+
+            
+
           </div>
         </div>
       </section>
