modified intro name

--- a/ipreneur.html
+++ b/ipreneur.html
@@ -60,7 +60,8 @@
             <li><a href="#venue">Venue</a></li>
             <li><a href="#hotels">Hotels</a></li>
             <li><a href="#gallery">Gallery</a></li> -->
-            <li><a href="#sponsors">Sponsors</a></li>
+            <!-- <li><a href="#sponsors">Sponsors</a></li> -->
+            <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
             <!-- <li class="buy-tickets"><a href="#buy-tickets" style="padding: 7px 22px; font-size: 13px;">Register</a></li> -->
           </ul>
@@ -75,9 +76,19 @@
   ============================-->
     <section id="intro">
       <div class="intro-container wow fadeIn">
-        <h1 class="mb-4 pb-0" style="text-transform:none">
+        <!-- <h1 class="mb-4 pb-0" style="text-transform:none">
           <span style="color: yellow;">iPreneur </span>
-        </h1>
+        </h1> -->
+        <div class="loader">
+          <span>i</span>
+          <span>P</span>
+          <span>r</span>
+          <span>e</span>
+          <span>n</span>
+          <span>e</span>
+          <span>u</span>
+          <span>r</span>
+        </div>
         <p class="mb-4 pb-0">India's biggest Social Entrepreneurship Summit</p>
         <a
           href="https://www.youtube.com/watch?v=vEdBhb9ic_A&ab_channel=Renderforest"
@@ -826,7 +837,7 @@
 
       <!-- meet the team -->
 
-      <section id="speakers" class="wow fadeInUp">
+      <section id="team" class="wow fadeInUp">
         <div class="container" >
           <div class="section-header">
             <h2>Meet The Team</h2>
