responsive intro title

--- a/ipreneur.html
+++ b/ipreneur.html
@@ -1161,7 +1161,7 @@
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
       -->
         <br />
-        Designed by
+        Developed by
         <a href="https://www.linkedin.com/in/ankitthakur00/">Ankit Thakur</a>
       </div>
     </div>
