chnaged bg on home page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!--==========================
     Intro Section
   ============================-->
-    <section id="intro" style="height:60vh ;">
+    <section id="intro" style="height:60vh ; background: url('/img/tiss_bg.jpeg');">
       <div class="intro-container wow fadeIn">
         <a href="#intro" class="scrollto" 
           ><img src="img/ecell2.png" alt="" title="" style="height: 200px;"
