--- a/ipreneur.html
+++ b/ipreneur.html
@@ -53,7 +53,7 @@
 
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li class="menu-active"><a href="index.html">Home</a></li>
+            <li class="menu"><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <!-- <li><a href="#speakers">Speakers</a></li>
             <li><a href="#schedule">Schedule</a></li>
