--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!--==========================
     Intro Section
   ============================-->
-    <section id="intro" style="height:60vh ; background: url('/img/tiss_bg.jpeg');">
+    <section id="intro" style="height:60vh ; background: url('https://img.etimg.com/thumb/width-1200,height-900,imgsize-368998,resizemode-1,msid-63693644/jobs/tiss-mumbai-wraps-up-final-placements-with-median-salary-of-rs-18-5-lakh.jpg');">
       <div class="intro-container wow fadeIn">
         <a href="#intro" class="scrollto" 
           ><img src="img/ecell2.png" alt="" title="" style="height: 200px;"
